--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 asgiref==3.8.1
+boto3==1.12.42
+botocore==1.15.49
 dj-database-url==0.5.0
 Django==3.2.25
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-storages==1.9.1
+docutils==0.15.2
 gunicorn==20.0.4
+jmespath==0.10.0
 oauthlib==3.2.2
 pillow==10.3.0
 psycopg2==2.9.9
 python3-openid==3.2.0
 pytz==2024.1
 requests-oauthlib==2.0.0
+s3transfer==0.3.7
 setuptools==67.4.0
 sqlparse==0.5.0
 stripe==9.9.0
+urllib3==1.25.11
