--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.8.1
-botocore==1.5.95
+boto3==1.34.124
+botocore==1.34.124
 dj-database-url==0.5.0
 Django==3.2.25
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-storages==1.14.3
 docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
@@ -14,7 +16,7 @@ psycopg2==2.9.9
 python3-openid==3.2.0
 pytz==2024.1
 requests-oauthlib==2.0.0
-s3transfer==0.1.13
+s3transfer==0.10.1
 setuptools==67.4.0
 sqlparse==0.5.0
 stripe==9.9.0
