--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,19 @@ Django==3.2.25
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-extensions==3.2.3
 django-storages==1.14.3
 docutils==0.15.2
+graphviz==0.20.3
 gunicorn==20.0.4
 idna==2.8
 jmespath==0.10.0
 oauthlib==3.2.2
 pillow==10.3.0
 psycopg2==2.9.9
+pydot==2.0.0
+pydotplus==2.0.2
+pyparsing==3.1.2
 python3-openid==3.2.0
 pytz==2024.1
 requests==2.32.3
